Corrected spacing between links in the mega menu

--- a/src/js/css/menubar.css
+++ b/src/js/css/menubar.css
@@ -81,6 +81,7 @@
 
 .mb-menu .mb-sm-open a{
 	white-space:normal;
+	padding:0.28em 0.79em;
 }
 
 .mb-menu .mb-sm-open ul{
@@ -125,7 +126,7 @@
 
 .mb-mega .mb-sm-open ul{
 	margin:0 0 0 1.2em;
-	padding:0 0 1em;
+	padding:0 0 1.15em;
 }
 
 .mb-mega .mb-sm-open .menu-col{
